--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.20.6",
     "bootstrap": "^5.1.3",
+    "primeicons": "^5.0.0",
+    "primereact": "^8.1.1",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
