--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@trendmicro/react-sidenav": "^0.5.0",
     "antd": "^4.20.6",
+    "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "moment": "^2.29.3",
     "primeicons": "^5.0.0",
