--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-scroll-motion": "^0.3.0",
     "react-toastify": "^9.0.1",
     "toastify": "^2.0.1",
     "web-vitals": "^2.1.4"
