--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "antd": "^4.20.6",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "json-server": "^0.17.0",
     "moment": "^2.29.3",
     "primeicons": "^5.0.0",
     "primereact": "^8.1.1",
